--- a/noble/debian/changelog
+++ b/noble/debian/changelog
@@ -1,3 +1,9 @@
+gz-sensors8 (8.0.1-2~noble) noble; urgency=medium
+
+  * gz-sensors8 8.0.1-2 release
+
+ -- Jose Luis Rivero <jrivero@osrfoundation.org>  Mon, 13 May 2024 16:43:21 +0200
+
 gz-sensors8 (8.0.1-1~noble) noble; urgency=medium
 
   * First release for noble
