--- a/noble/debian/changelog
+++ b/noble/debian/changelog
@@ -1,3 +1,9 @@
+gz-sensors8 (8.2.0-1~noble) noble; urgency=medium
+
+  * gz-sensors8 8.2.0-1 release
+
+ -- Ian Chen <ichen@openrobotics.org>  Fri, 14 Jun 2024 16:48:39 +0000
+
 gz-sensors8 (8.1.0-1~noble) noble; urgency=medium
 
   * gz-sensors8 8.1.0-1 release
